# supercollider-ann

./: CMakeLists.txt  README.md
lang_class/: CMakeLists.txt  ann.cpp  ann_lang.sc  ann_mapper.sc  node.sc
ugen/: CMakeLists.txt  ann.cpp  ann_ugen.sc  fann_rt.cpp  fann_rt.hpp  plugin.cpp  plugin.hpp  pool.cpp  pool.hpp  ugen_autoasoc_trainer.cpp  ugen_basic.cpp  ugen_time.cpp
